--- a/desafiocordel/cordelmoderno.html
+++ b/desafiocordel/cordelmoderno.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a>
+        <p>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="next"><strong>Milton Duarte</strong></a>
+        </p>
     </header>
     <section>
         <p>
@@ -23,8 +25,8 @@
             Vou dizer tudo em poesia. <br>
         </p>
     </section>
-    <section>
-        <p>
+    <section id="img01">
+        <p class="especial">
             Não é mais como era antes <br>
             É tudo abreviado <br>
             "Você" só tem duas letras <br>
@@ -42,7 +44,7 @@
             Ou vai até no começo <br>
             Agora é .com <br> 
             Se o saite é muito bom <br>
-            Ele vale um alto preço. <br>
+            Ele vale um alto preço. <br> <br>
             
             Pra piorar a liguagem <br>
             O emoticom é um risco <br> 
@@ -53,8 +55,8 @@
             Decifre esse rabisco. <br>
         </p>
     </section>
-    <section>
-        <p>
+    <section id="img02">
+        <p class="especial">
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
             Mandava no mês de Junho <br>
@@ -72,7 +74,7 @@
             A pessoa foi embora <br>
             Abriu outro aplicativo <br>
             O mundo ficou cativo <br>
-            Da tecnologia do agora. <br>
+            Da tecnologia do agora. <br> <br>
 
             Felizmente, pra orar <br>
             Não precisa de internet <br>
