--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -21,7 +21,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, provident neque. Architecto corporis ad ratione vel nisi natus. Atque cum rem vel illum. Earum voluptatibus, nesciunt perspiciatis eius asperiores nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, rem voluptatibus, repellendus optio laudantium corrupti labore dolor libero provident quod blanditiis reiciendis ullam cumque pariatur qui cum quis dolorem mollitia.</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500"></iframe>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero error sequi quaerat ipsum ut voluptatibus, mollitia exercitationem facilis nemo modi distinctio ipsam in neque, minima expedita. Eius consequuntur quidem ipsa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur deserunt velit ullam doloremque atque reiciendis quia nemo, saepe accusantium eius obcaecati a perferendis quasi nobis debitis delectus natus sint repellendus?</p>
     
